# hyper-api-rust

./: .gitignore  .release-please-manifest.json  AGENTS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE-MIT.txt  MIGRATING-0.3.md  Makefile  NOTICE  README.md  build.ps1  clippy.toml  deny.toml  package-lock.json  package.json  release-please-config.json  run_all_examples.ps1  run_all_examples.sh  run_examples_wsl.sh
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  npm-build-publish.yml  release-please.yml  release.yml  verify-hyperd-pin.yml
docs/: BENCHMARK_GUIDE.md  GITHUB_OPERATIONS.md  NODEJS_API_SUMMARY.md  README.md  RUST_DOCUMENTATION_STYLE.md  RUST_GUIDELINES.md  TRANSACTIONS.md
hyperdb-api/: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md
hyperdb-api-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
hyperdb-api-core/docs/: DEVELOPMENT-client.md  DEVELOPMENT-protocol.md  DEVELOPMENT-types.md  IPC_IMPLEMENTATION.md
hyperdb-api-core/src/: lib.rs
hyperdb-api-core/tests/: async_copy_cancel_tests.rs  async_prepared_drop_tests.rs  async_query_streaming_tests.rs  client_tests.rs  copy_tests.rs  prepared_statement_tests.rs  prepared_streaming_tests.rs  tls_tests.rs
hyperdb-api-derive/: Cargo.toml  README.md
hyperdb-api-derive/src/: lib.rs
hyperdb-api-node/: AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION_STYLE.md  README.md  arrow.mjs  build.rs  index.d.ts  index.js  package-lock.json  package.json  pool.mjs
hyperdb-api-node/.github/workflows/: CI.yml
hyperdb-api-node/__test__/: benchmark.mjs  smoke.mjs
hyperdb-api-node/examples/: arrow-analytics.mjs  complete-api-tour.mjs  complete-api-tour.mts  generate-demo-data.mjs  typed-analytics.mts
hyperdb-api-node/examples/hyper-explorer/: README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
hyperdb-api-node/examples/hyper-explorer/server/: fft.ts  generator.ts  index.ts  profiler.ts  routes.ts
hyperdb-api-node/examples/hyper-explorer/src/: App.tsx  api.ts  fourierClient.ts  index.css
hyperdb-api-node/examples/hyper-explorer/src/components/: ColumnDetailView.tsx  ColumnStats.tsx  DataGrid.tsx  FileOpener.tsx  GenerateDatabase.tsx  QueryHistory.tsx  QueryStatsTooltip.tsx  SchemaTree.tsx  SqlEditor.tsx
hyperdb-api-node/npm/darwin-arm64/: LICENSE-HYPERD  package.json
hyperdb-api-node/npm/darwin-x64/: package.json
hyperdb-api-node/npm/linux-arm64-gnu/: package.json
hyperdb-api-node/npm/linux-x64-gnu/: package.json
hyperdb-api-node/npm/linux-x64-musl/: package.json
hyperdb-api-node/npm/win32-x64-msvc/: CHANGELOG.md  package.json
hyperdb-api-node/scripts/: ci-copy-artifact.js  copy-node.js
hyperdb-api-node/src/: arrow_inserter.rs  catalog.rs  columnar.rs  connection.rs  inserter.rs  lib.rs  prepared.rs  process.rs  query_stats.rs  query_stream.rs  result.rs  types.rs
hyperdb-api-salesforce/: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md
hyperdb-api-salesforce/examples/: salesforce_auth_example.rs
hyperdb-api-salesforce/src/: config.rs  error.rs  jwt.rs  lib.rs  provider.rs  token.rs
hyperdb-api/benches/: arrow_batching_benchmark.rs  async_parallel_benchmark.rs  benchmark.rs  benchmark_suite.rs  common.rs  grpc_benchmark_tests.rs  kv_benchmark.rs
hyperdb-api/examples/: async_parity_smoke.rs  create_hyper_file_from_csv.rs  delete_data_in_existing_hyper_file.rs  (+8 more)
hyperdb-bootstrap/: CHANGELOG.md  Cargo.toml  README.md  build.rs  hyperd-version.toml
hyperdb-bootstrap/src/: download.rs  error.rs  extract.rs  install.rs  lib.rs  platform.rs  release.rs  scrape.rs  url.rs  verify.rs
hyperdb-bootstrap/tests/: integration.rs
hyperdb-compile-check/: Cargo.toml
hyperdb-mcp/: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  ROADMAP.md  build.rs
scripts/: assemble-npm.sh  setup-branch-protection.sh
sea-query-hyperdb/: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md
(+198 files in other folders)
