[package]
name = "hyperdb-api-salesforce"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Salesforce Data Cloud OAuth authentication for Hyper database"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["database", "hyper", "salesforce", "oauth", "data-cloud"]
categories = ["database", "authentication"]

[dependencies]
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
rsa = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
rand = { workspace = true }
hyperdb-api-core = { path = "../hyperdb-api-core", features = ["salesforce-auth"] }
arrow = { version = "58.0", default-features = false, features = ["ipc"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "salesforce_auth_example"
path = "examples/salesforce_auth_example.rs"
